# red-hat

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/assets/animations/: character-steps.txt  demo.txt  dog.txt  fade-in-0.txt  fade-in-1.txt  fade-in-2.txt  fade-in-out.txt  fade-in.txt  grand-sun.txt  grand-wolf.txt  grand.txt  lighter.txt  thunder-background.txt  thunder.txt
app/assets/shaders/: fragment-shader.glsl  morphing-vertex-shader.glsl  plain-fragment-shader.glsl  plain-vertex-shader.glsl  plain-with-light-fragment-shader.glsl  plain-with-light-vertex-shader.glsl  texture-fragment-shader.glsl  texture-vertex-shader.glsl  texture-with-light-fragment-shader.glsl  texture-with-light-vertex-shader.glsl  vertex-shader.glsl
app/config/: game-entities.txt  game.txt  menu-entities.txt  menu.txt  pause-menu-entities.txt  pause-menu.txt  title-entities.txt  title.txt
app/src/: App.hpp  GameScreen.cpp  GameScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  PauseScreen.cpp  PauseScreen.hpp  Screen.hpp  ScreenManager.cpp  ScreenManager.hpp  TitleScreen.cpp  TitleScreen.hpp  WaterSurface.hpp  main.cpp
app/src/Actions/: ActionManager.hpp  Actions.hpp  EndGameAction.hpp  FirstWolfAction.hpp  FlashLightAction.hpp  GrandSun.hpp  GrandTransformation.hpp  RainAction.hpp  SoundAction.hpp  StopRainAction.hpp  TakeLighterAction.hpp  ThunderAction.hpp  WolfIsGone.hpp  WolfsAction.hpp
app/src/Menu/: Menu.cpp  Menu.hpp  MenuItem.cpp  MenuItem.hpp
engine/: CMakeLists.txt
engine/src/: Math.cpp  Math.hpp
engine/src/AI/BehaviourTree/: BehaviourTree.hpp  Blackboard.hpp  Task.hpp  TaskDecorator.hpp
engine/src/AI/BehaviourTree/Tasks/: ActivateTask.hpp  ActiveTask.hpp  BeginInteractionTask.hpp  DeactivateTask.hpp  DieTask.hpp  DistanceLessThanTask.hpp  EndInteractionTask.hpp  FlyTask.hpp  FreeTask.hpp  HideTask.hpp  HitByEnemyTask.hpp  IsInteractionTask.hpp  IsVisitedTask.hpp  JumpTask.hpp  LookAtTask.hpp  MoveLeftTask.hpp  MoveRightTask.hpp  MoveTask.hpp  OnGroundTask.hpp  ParallelTask.hpp  ShowTask.hpp  (+11 more)
engine/src/Animation/: Animation.hpp  AnimationLoader.cpp  AnimationScene.hpp  TimeLine.hpp
engine/src/Collision/: BroadPhaseAlgorithm.hpp  CollisionDetection.cpp  CollisionDetection.hpp  NarrowPhaseAlgorithm.cpp  NarrowPhaseAlgorithm.hpp
engine/src/Collision/Shapes/: AABB.hpp  CollisionShape.hpp
engine/src/Core/: Application.cpp  Application.hpp  File.cpp  Input.hpp  Layer.cpp  Layer.hpp  Loader.cpp  Loader.hpp  ShaderManager.cpp  ShaderManager.hpp  TextureManager.cpp  TextureManager.hpp  Time.cpp  Window.hpp
engine/src/Core/SDL/: SDLInput.cpp  SDLInput.hpp  SDLWindow.cpp  SDLWindow.hpp
engine/src/ECS/: ECS.hpp  Entity.hpp  EntityManager.hpp  EntitySerializer.cpp  EntitySerializer.hpp  System.hpp  SystemStack.cpp  SystemStack.hpp
engine/src/ECS/Components/: AIComponent.hpp  AnimationComponent.hpp  AttackComponent.hpp  CameraComponent.hpp  CollisionComponent.hpp  DieComponent.hpp  DirectionComponent.hpp  EmitterComponent.hpp  EnemyComponent.hpp  FrameAnimationComponent.hpp  FrameComponent.hpp  GroundCollisionComponent.hpp  GroundComponent.hpp  GroupComponent.hpp  IgnoreLightComponent.hpp  InteractionComponent.hpp  LocationComponent.hpp  MaterialComponent.hpp  MorphingComponent.cpp  MorphingComponent.hpp  ObstacleComponent.hpp  ParalaxScrollingComponent.hpp  ParentComponent.hpp  PointLightComponent.hpp  RenderComponent.cpp  RenderComponent.hpp  RigitBodyComponent.hpp  RunningAwayComponent.hpp  SpotLightComponent.hpp  SteeringComponent.hpp  TextureComponent.cpp  TextureComponent.hpp  VelocityComponent.hpp  VisitedComponent.hpp
engine/src/ECS/Systems/: AISystem.cpp  AISystem.hpp  AnimationSystem.cpp  AnimationSystem.hpp  AttackSystem.cpp  AttackSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  EmitterSystem.cpp  EmitterSystem.hpp  GroundCollisionSystem.cpp  GroundCollisionSystem.hpp  LightSystem.cpp  LightSystem.hpp  MorphingSystem.cpp  MorphingSystem.hpp  MoveSystem.cpp  MoveSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  SpotLightSystem.cpp  SpotLightSystem.hpp  SteeringSystem.cpp  SteeringSystem.hpp  TextureSystem.cpp  TextureSystem.hpp
engine/src/Events/: EventDispatcher.hpp  EventHandler.hpp
engine/src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
engine/src/Render/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  Render.cpp  Render.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
engine/src/Render/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLRender.cpp  OpenGLRender.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
engine/src/Sound/: SoundMixer.hpp
engine/src/Sound/SDL/: SDLSoundBuffer.cpp  SDLSoundBuffer.hpp  SDLSoundMixer.cpp  SDLSoundMixer.hpp
